DATAGO-76557: Add batched message support to producer binding (#296)
* Add support for batched messages in the producer binding
* Fix correlation key resolution for transacted publish

---------

Co-authored-by: mayur-solace <81177023+mayur-solace@users.noreply.github.com>