@@ -25,15 +25,13 @@ import com.solacesystems.jcsmp.StreamMessage;
 import com.solacesystems.jcsmp.TextMessage;
 import com.solacesystems.jcsmp.XMLContentMessage;
 import com.solacesystems.jcsmp.XMLMessage;
-import java.util.UUID;
 import org.apache.commons.lang3.RandomStringUtils;
-import org.apache.commons.lang3.RandomUtils;
+import org.apache.commons.lang3.tuple.ImmutablePair;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.assertj.core.api.Assertions;
 import org.assertj.core.api.InstanceOfAssertFactories;
 import org.assertj.core.api.MapAssert;
-import org.hamcrest.CoreMatchers;
 import org.junit.jupiter.api.Named;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -59,6 +57,7 @@ import org.springframework.integration.support.DefaultMessageBuilderFactory;
 import org.springframework.integration.support.MessageBuilder;
 import org.springframework.messaging.Message;
 import org.springframework.messaging.MessageHeaders;
+import org.springframework.messaging.support.GenericMessage;
 import org.springframework.util.MimeType;
 import org.springframework.util.MimeTypeUtils;
 import org.springframework.util.SerializationUtils;
@@ -75,12 +74,15 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
-import java.util.concurrent.atomic.AtomicInteger;
+import java.util.UUID;
+import java.util.concurrent.ThreadLocalRandom;
 import java.util.function.BiConsumer;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.hamcrest.CoreMatchers.not;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.containsString;
@@ -121,102 +123,150 @@ public class XMLMessageMapperTest {
 		assertTrue(JMS_INVALID_HEADER_NAMES.stream().anyMatch(h -> h.startsWith("JMS_")));
 	}
 
-	@Test
-	public void testMapSpringMessageToXMLMessage_ByteArray() throws Exception {
+	@ParameterizedTest
+	@MethodSource("springPayloadTypeProviders")
+	<T, MT extends XMLMessage> void testMapSpringMessageToXMLMessage(
+			SpringMessageTypeProvider<T, MT> springMessageTypeProvider) {
 		Message<?> testSpringMessage = new DefaultMessageBuilderFactory()
-				.withPayload("testPayload".getBytes(StandardCharsets.UTF_8))
+				.withPayload(springMessageTypeProvider.createPayload())
 				.setHeader("test-header-1", "test-header-val-1")
 				.setHeader("test-header-2", "test-header-val-2")
-				.setHeader(MessageHeaders.CONTENT_TYPE, MimeTypeUtils.APPLICATION_OCTET_STREAM_VALUE)
+				.setHeader(MessageHeaders.CONTENT_TYPE, springMessageTypeProvider.mimeType().toString())
 				.build();
 
-		XMLMessage xmlMessage = xmlMessageMapper.map(testSpringMessage, null, false);
+		Assertions.assertThat(xmlMessageMapper.map(testSpringMessage, null, false))
+				.asInstanceOf(InstanceOfAssertFactories.type(springMessageTypeProvider.expectedXmlMessageType()))
+				.satisfies(
+						m -> Assertions.assertThat(springMessageTypeProvider.extractSmfPayload(m))
+								.isEqualTo(testSpringMessage.getPayload()),
+						m -> {
+							if (springMessageTypeProvider.serializedPayload()) {
+								Assertions.assertThat(m.getProperties().getBoolean(SolaceBinderHeaders.SERIALIZED_PAYLOAD))
+										.isTrue();
+							}
+						},
+						m -> validateXMLProperties(m, testSpringMessage)
+				);
+	}
 
-		assertThat(xmlMessage, CoreMatchers.instanceOf(BytesMessage.class));
-		assertEquals(testSpringMessage.getPayload(), ((BytesMessage) xmlMessage).getData());
-		validateXMLProperties(xmlMessage, testSpringMessage);
+	@ParameterizedTest
+	@MethodSource("springPayloadTypeProviders")
+	<T, MT extends XMLMessage> void testMapSpringMessageToXMLMessageBatch(
+			SpringMessageTypeProvider<T, MT> springMessageTypeProvider) {
+		String excludedHeader = "test-excluded-header";
+		List<ImmutablePair<T, Map<String, Object>>> messageContents = IntStream.range(0, 256)
+				.mapToObj(i -> new ImmutablePair<>(springMessageTypeProvider.createPayload(),
+						Map.<String, Object>ofEntries(
+								Map.entry("test-header-1", "test-header-val-1"),
+								Map.entry("test-header-2", "test-header-val-2"),
+								Map.entry("test-header-3", "test-header-val-unique-" + i),
+								Map.entry("test-excluded-header", "EXCLUDED VALUE"),
+								Map.entry(MessageHeaders.CONTENT_TYPE, springMessageTypeProvider.mimeType().toString())
+				)))
+				.toList();
+
+		Message<List<T>> batchedMessage = MessageBuilder
+				.withPayload(messageContents.stream()
+						.map(ImmutablePair::getLeft)
+						.toList())
+				.setHeader(SolaceBinderHeaders.BATCHED_HEADERS,
+						messageContents.stream().map(ImmutablePair::getRight).toList())
+				.build();
+
+		List<XMLMessage> xmlMessages = xmlMessageMapper.mapBatchMessage(
+				batchedMessage, Set.of(excludedHeader), false);
+
+		Mockito.verify(xmlMessageMapper, Mockito.times(messageContents.size()))
+				.map(Mockito.any(),
+						Mockito.anyMap(),
+						Mockito.eq(StaticMessageHeaderAccessor.getId(batchedMessage)),
+						Mockito.eq(Set.of(excludedHeader)),
+						Mockito.eq(false));
+
+		Assertions.assertThat(xmlMessages).hasSameSizeAs(messageContents);
+		Assertions.assertThat(IntStream.range(0, xmlMessages.size())
+						.mapToObj(i -> new ImmutablePair<>(xmlMessages.get(i), messageContents.get(i))))
+				.allSatisfy(comparison ->
+						Assertions.assertThat(comparison.getLeft())
+								.asInstanceOf(InstanceOfAssertFactories.type(springMessageTypeProvider.expectedXmlMessageType()))
+								.extracting(springMessageTypeProvider::extractSmfPayload)
+								.isEqualTo(comparison.getRight().getLeft()))
+				.allSatisfy(comparison -> {
+					if (springMessageTypeProvider.serializedPayload()) {
+						Assertions.assertThat(comparison.getLeft()
+										.getProperties()
+										.getBoolean(SolaceBinderHeaders.SERIALIZED_PAYLOAD))
+								.isTrue();
+					}
+				})
+				.allSatisfy(comparison -> {
+					Map<String, Object> expectedHeaders = new HashMap<>(comparison.getRight().getRight());
+					expectedHeaders.remove(excludedHeader);
+					validateXMLProperties(
+							comparison.getLeft(), // XML message
+							comparison.getRight().getLeft(), // input Spring message payload
+							comparison.getRight().getRight(), // input Spring message headers
+							expectedHeaders);
+						}
+				);
 	}
 
 	@Test
-	public void testMapSpringMessageToXMLMessage_String() throws Exception {
-		Message<?> testSpringMessage = new DefaultMessageBuilderFactory()
-				.withPayload("testPayload")
-				.setHeader("test-header-1", "test-header-val-1")
-				.setHeader("test-header-2", "test-header-val-2")
-				.setHeader(MessageHeaders.CONTENT_TYPE, MimeTypeUtils.TEXT_PLAIN_VALUE)
-				.build();
-
-		XMLMessage xmlMessage = xmlMessageMapper.map(testSpringMessage, null, false);
-
-		assertThat(xmlMessage, CoreMatchers.instanceOf(TextMessage.class));
-		assertEquals(testSpringMessage.getPayload(), ((TextMessage) xmlMessage).getText());
-		validateXMLProperties(xmlMessage, testSpringMessage);
+	void testMapSpringMessageToXMLMessageBatch_noBatchedHeaders() {
+		List<String> payloads = IntStream.range(0, 256).mapToObj(i -> "asdasd").toList();
+		Assertions.assertThat(xmlMessageMapper.mapBatchMessage(MessageBuilder.withPayload(payloads).build(), null, false))
+				.hasSameSizeAs(payloads)
+				.allSatisfy(m -> Assertions.assertThat(m.getProperties().keySet())
+						.containsOnly(SolaceBinderHeaders.MESSAGE_VERSION))
+				.asInstanceOf(InstanceOfAssertFactories.list(TextMessage.class))
+				.extracting(TextMessage::getText)
+				.containsExactlyInAnyOrderElementsOf(payloads);
 	}
 
 	@Test
-	public void testMapSpringMessageToXMLMessage_Serializable() throws Exception {
-		Message<?> testSpringMessage = new DefaultMessageBuilderFactory()
-				.withPayload(new SerializableFoo("abc123", "HOOPLA!"))
-				.setHeader("test-header-1", "test-header-val-1")
-				.setHeader("test-header-2", "test-header-val-2")
-				.setHeader(MessageHeaders.CONTENT_TYPE, "application/x-java-serialized-object")
+	void testMapSpringMessageToXMLMessageBatch_invalidBatchedPayload() {
+		assertThatThrownBy(() -> xmlMessageMapper.mapBatchMessage(MessageBuilder.withPayload("invalid batched payload").build(), null, false))
+				.isInstanceOf(SolaceMessageConversionException.class)
+				.rootCause()
+				.isInstanceOf(IllegalArgumentException.class)
+				.hasMessageContaining("payload of batched message")
+				.hasMessageContaining("to be of type List<?>");
+	}
+
+	@ParameterizedTest
+	@ValueSource(booleans = {false, true})
+	void testMapSpringMessageToXMLMessageBatch_invalidBatchedHeadersSize(boolean isEmpty) {
+		List<String> payloads = IntStream.range(0, 10).mapToObj(i -> "asdasd").toList();
+
+		Message<List<String>> batchedMessage = MessageBuilder.withPayload(payloads)
+				.setHeader(SolaceBinderHeaders.BATCHED_HEADERS,
+						isEmpty ? List.of() : IntStream.range(0, payloads.size() / 2).mapToObj(i -> Map.of()).toList())
 				.build();
 
-		XMLMessage xmlMessage = xmlMessageMapper.map(testSpringMessage, null, false);
-
-		assertThat(xmlMessage, CoreMatchers.instanceOf(BytesMessage.class));
-		assertEquals(testSpringMessage.getPayload(),
-				SerializationUtils.deserialize(((BytesMessage) xmlMessage).getData()));
-		assertThat(xmlMessage.getProperties().keySet(),
-				hasItem(SolaceBinderHeaders.SERIALIZED_PAYLOAD));
-		assertEquals(true, xmlMessage.getProperties().getBoolean(SolaceBinderHeaders.SERIALIZED_PAYLOAD));
-		validateXMLProperties(xmlMessage, testSpringMessage);
+		assertThatThrownBy(() -> xmlMessageMapper.mapBatchMessage(batchedMessage, null, false))
+				.isInstanceOf(SolaceMessageConversionException.class)
+				.rootCause()
+				.isInstanceOf(IllegalArgumentException.class)
+				.hasMessageContaining("must have matching lengths");
 	}
 
 	@Test
-	public void testMapSpringMessageToXMLMessage_STDStream() throws Exception {
-		SDTStream sdtStream = JCSMPFactory.onlyInstance().createStream();
-		sdtStream.writeBoolean(true);
-		sdtStream.writeCharacter('s');
-		sdtStream.writeMap(JCSMPFactory.onlyInstance().createMap());
-		sdtStream.writeStream(JCSMPFactory.onlyInstance().createStream());
-		Message<?> testSpringMessage = new DefaultMessageBuilderFactory()
-				.withPayload(sdtStream)
-				.setHeader("test-header-1", "test-header-val-1")
-				.setHeader("test-header-2", "test-header-val-2")
-				.setHeader(MessageHeaders.CONTENT_TYPE, "application/x-java-serialized-object")
-				.build();
+	void testMapSpringMessageToXMLMessageBatch_doNotReWrapMessageConversionException() {
+		Message<?> testSpringMessage = MessageBuilder.withPayload(List.of("foo", "bar")).build();
 
-		XMLMessage xmlMessage = xmlMessageMapper.map(testSpringMessage, null, false);
-
-		assertThat(xmlMessage, CoreMatchers.instanceOf(StreamMessage.class));
-		assertEquals(testSpringMessage.getPayload(), ((StreamMessage) xmlMessage).getStream());
-		validateXMLProperties(xmlMessage, testSpringMessage);
+		SolaceMessageConversionException exception = new SolaceMessageConversionException("test");
+		Mockito.doThrow(exception).when(xmlMessageMapper).map(
+				Mockito.any(),
+				Mockito.anyMap(),
+				Mockito.eq(StaticMessageHeaderAccessor.getId(testSpringMessage)),
+				Mockito.isNull(),
+				Mockito.eq(false));
+		assertThatThrownBy(() -> xmlMessageMapper.map(testSpringMessage, null, false))
+				.isEqualTo(exception);
 	}
 
 	@Test
-	public void testMapSpringMessageToXMLMessage_STDMap() throws Exception {
-		SDTMap sdtMap = JCSMPFactory.onlyInstance().createMap();
-		sdtMap.putBoolean("a", true);
-		sdtMap.putCharacter("b", 's');
-		sdtMap.putMap("c", JCSMPFactory.onlyInstance().createMap());
-		sdtMap.putStream("d", JCSMPFactory.onlyInstance().createStream());
-		Message<?> testSpringMessage = new DefaultMessageBuilderFactory()
-				.withPayload(sdtMap)
-				.setHeader("test-header-1", "test-header-val-1")
-				.setHeader("test-header-2", "test-header-val-2")
-				.setHeader(MessageHeaders.CONTENT_TYPE, "application/x-java-serialized-object")
-				.build();
-
-		XMLMessage xmlMessage = xmlMessageMapper.map(testSpringMessage, null, false);
-
-		assertThat(xmlMessage, CoreMatchers.instanceOf(MapMessage.class));
-		assertEquals(testSpringMessage.getPayload(), ((MapMessage) xmlMessage).getMap());
-		validateXMLProperties(xmlMessage, testSpringMessage);
-	}
-
-	@Test
-	public void testMapSpringMessageToXMLMessage_WriteSolaceProperties() throws Exception {
+	void testMapSpringMessageToXMLMessage_WriteSolaceProperties() throws Exception {
 		MessageBuilder<?> messageBuilder = new DefaultMessageBuilderFactory()
 				.withPayload("")
 				.setHeader(MessageHeaders.CONTENT_TYPE, MimeTypeUtils.TEXT_PLAIN_VALUE);
@@ -230,48 +280,44 @@ public class XMLMessageMapperTest {
 		assertNotEquals(0, writeableHeaders.size(), "Test header set was empty");
 
 		for (Map.Entry<String, ? extends HeaderMeta<?>> header : writeableHeaders) {
-			Object value;
-			switch (header.getKey()) {
-				case SolaceHeaders.APPLICATION_MESSAGE_ID:
-				case SolaceHeaders.APPLICATION_MESSAGE_TYPE:
-				case SolaceHeaders.CORRELATION_ID:
-				case SolaceHeaders.HTTP_CONTENT_ENCODING:
-				case SolaceHeaders.SENDER_ID:
-					value = RandomStringUtils.randomAlphanumeric(10);
-					break;
-				case SolaceHeaders.DMQ_ELIGIBLE:
-					value = !(Boolean) ((SolaceHeaderMeta<?>) header.getValue()).getDefaultValueOverride();
-					break;
-				case SolaceHeaders.IS_REPLY:
-					value = true; //The opposite of what a Solace message defaults to
-					break;
-				case SolaceHeaders.EXPIRATION:
-				case SolaceHeaders.SENDER_TIMESTAMP:
-				case SolaceHeaders.SEQUENCE_NUMBER:
-				case SolaceHeaders.TIME_TO_LIVE:
-					value = (long) RandomUtils.nextInt(0, 10000);
-					break;
-				case SolaceHeaders.PRIORITY:
-					value = RandomUtils.nextInt(0, 255);
-					break;
-				case SolaceHeaders.REPLY_TO:
-					value = JCSMPFactory.onlyInstance().createQueue(RandomStringUtils.randomAlphanumeric(10));
-					break;
-				case SolaceHeaders.USER_DATA:
-					value = RandomStringUtils.randomAlphanumeric(10).getBytes();
-					break;
-				case SolaceBinderHeaders.PARTITION_KEY:
-					value = RandomStringUtils.randomAlphanumeric(10);
+			messageBuilder.setHeader(header.getKey(), Objects.requireNonNull(switch (header.getKey()) {
+				case SolaceHeaders.APPLICATION_MESSAGE_ID,
+					 SolaceHeaders.APPLICATION_MESSAGE_TYPE,
+					 SolaceHeaders.CORRELATION_ID,
+					 SolaceHeaders.HTTP_CONTENT_ENCODING,
+					 SolaceHeaders.SENDER_ID,
+					 SolaceBinderHeaders.TARGET_DESTINATION_TYPE ->
+						RandomStringUtils.randomAlphanumeric(10);
+				case SolaceHeaders.DMQ_ELIGIBLE ->
+						!(Boolean) ((SolaceHeaderMeta<?>) header.getValue()).getDefaultValueOverride();
+				case SolaceHeaders.IS_REPLY ->
+						true; //The opposite of what a Solace message defaults to
+				case SolaceHeaders.EXPIRATION,
+					 SolaceHeaders.SENDER_TIMESTAMP,
+					 SolaceHeaders.SEQUENCE_NUMBER,
+					 SolaceHeaders.TIME_TO_LIVE ->
+						(long) ThreadLocalRandom.current().nextInt(10000);
+				case SolaceHeaders.PRIORITY ->
+						ThreadLocalRandom.current().nextInt(255);
+				case SolaceHeaders.REPLY_TO ->
+						JCSMPFactory.onlyInstance().createQueue(RandomStringUtils.randomAlphanumeric(10));
+				case SolaceHeaders.USER_DATA ->
+						RandomStringUtils.randomAlphanumeric(10).getBytes();
+				case SolaceBinderHeaders.BATCHED_HEADERS ->
+						List.of(Map.of("foo", "bar"));
+				case SolaceBinderHeaders.CONFIRM_CORRELATION ->
+						new CorrelationData();
+				case SolaceBinderHeaders.PARTITION_KEY -> {
 					// This value is overwritten by binder-defined partition key header
 					messageBuilder.setHeader(XMLMessage.MessageUserPropertyConstants.QUEUE_PARTITION_KEY,
 							RandomStringUtils.randomAlphanumeric(10));
-					break;
-				default:
-					value = null;
+					yield RandomStringUtils.randomAlphanumeric(10);
+				}
+				default -> {
 					fail(String.format("no test for header %s", header.getKey()));
-			}
-			assertNotNull(value);
-			messageBuilder.setHeader(header.getKey(), value);
+					yield null;
+				}
+			}));
 		}
 
 		Message<?> testSpringMessage = messageBuilder.build();
@@ -280,54 +326,43 @@ public class XMLMessageMapperTest {
 		for (Map.Entry<String, ? extends HeaderMeta<?>> header : writeableHeaders) {
 			Object expectedValue = testSpringMessage.getHeaders().get(header.getKey());
 			switch (header.getKey()) {
-				case SolaceHeaders.APPLICATION_MESSAGE_ID:
-					assertEquals(expectedValue, xmlMessage.getApplicationMessageId());
-					break;
-				case SolaceHeaders.APPLICATION_MESSAGE_TYPE:
-					assertEquals(expectedValue, xmlMessage.getApplicationMessageType());
-					break;
-				case SolaceHeaders.CORRELATION_ID:
-					assertEquals(expectedValue, xmlMessage.getCorrelationId());
-					break;
-				case SolaceHeaders.DMQ_ELIGIBLE:
-					assertEquals(expectedValue, xmlMessage.isDMQEligible());
-					break;
-				case SolaceHeaders.EXPIRATION:
-					assertEquals(expectedValue, xmlMessage.getExpiration());
-					break;
-				case SolaceHeaders.IS_REPLY:
-					assertEquals(expectedValue, xmlMessage.isReplyMessage());
-					break;
-				case SolaceHeaders.HTTP_CONTENT_ENCODING:
-					assertEquals(expectedValue, xmlMessage.getHTTPContentEncoding());
-					break;
-				case SolaceHeaders.PRIORITY:
-					assertEquals(expectedValue, xmlMessage.getPriority());
-					break;
-				case SolaceHeaders.REPLY_TO:
-					assertEquals(expectedValue, xmlMessage.getReplyTo());
-					break;
-				case SolaceHeaders.SENDER_ID:
-					assertEquals(expectedValue, xmlMessage.getSenderId());
-					break;
-				case SolaceHeaders.SENDER_TIMESTAMP:
-					assertEquals(expectedValue, xmlMessage.getSenderTimestamp());
-					break;
-				case SolaceHeaders.SEQUENCE_NUMBER:
-					assertEquals(expectedValue, xmlMessage.getSequenceNumber());
-					break;
-				case SolaceHeaders.TIME_TO_LIVE:
-					assertEquals(expectedValue, xmlMessage.getTimeToLive());
-					break;
-				case SolaceHeaders.USER_DATA:
-					assertEquals(expectedValue, xmlMessage.getUserData());
-					break;
-				case SolaceBinderHeaders.PARTITION_KEY:
-					assertEquals(expectedValue, xmlMessage.getProperties()
-							.getString(XMLMessage.MessageUserPropertyConstants.QUEUE_PARTITION_KEY));
-					break;
-				default:
-					fail(String.format("no test for header %s", header.getKey()));
+				case SolaceHeaders.APPLICATION_MESSAGE_ID ->
+						assertEquals(expectedValue, xmlMessage.getApplicationMessageId());
+				case SolaceHeaders.APPLICATION_MESSAGE_TYPE ->
+						assertEquals(expectedValue, xmlMessage.getApplicationMessageType());
+				case SolaceHeaders.CORRELATION_ID ->
+						assertEquals(expectedValue, xmlMessage.getCorrelationId());
+				case SolaceHeaders.DMQ_ELIGIBLE ->
+						assertEquals(expectedValue, xmlMessage.isDMQEligible());
+				case SolaceHeaders.EXPIRATION ->
+						assertEquals(expectedValue, xmlMessage.getExpiration());
+				case SolaceHeaders.IS_REPLY ->
+						assertEquals(expectedValue, xmlMessage.isReplyMessage());
+				case SolaceHeaders.HTTP_CONTENT_ENCODING ->
+						assertEquals(expectedValue, xmlMessage.getHTTPContentEncoding());
+				case SolaceHeaders.PRIORITY ->
+						assertEquals(expectedValue, xmlMessage.getPriority());
+				case SolaceHeaders.REPLY_TO ->
+						assertEquals(expectedValue, xmlMessage.getReplyTo());
+				case SolaceHeaders.SENDER_ID ->
+						assertEquals(expectedValue, xmlMessage.getSenderId());
+				case SolaceHeaders.SENDER_TIMESTAMP ->
+						assertEquals(expectedValue, xmlMessage.getSenderTimestamp());
+				case SolaceHeaders.SEQUENCE_NUMBER ->
+						assertEquals(expectedValue, xmlMessage.getSequenceNumber());
+				case SolaceHeaders.TIME_TO_LIVE ->
+						assertEquals(expectedValue, xmlMessage.getTimeToLive());
+				case SolaceHeaders.USER_DATA ->
+						assertEquals(expectedValue, xmlMessage.getUserData());
+				case SolaceBinderHeaders.PARTITION_KEY ->
+						assertEquals(expectedValue, xmlMessage.getProperties()
+								.getString(XMLMessage.MessageUserPropertyConstants.QUEUE_PARTITION_KEY));
+				case SolaceBinderHeaders.BATCHED_HEADERS,
+					 SolaceBinderHeaders.CONFIRM_CORRELATION,
+					 SolaceBinderHeaders.TARGET_DESTINATION_TYPE ->
+						// These Spring headers aren't ever reflected in the SMF message
+						assertNull(xmlMessage.getProperties().get(header.getKey()));
+				default -> fail(String.format("no test for header %s", header.getKey()));
 			}
 		}
 
@@ -335,7 +370,7 @@ public class XMLMessageMapperTest {
 	}
 
 	@Test
-	public void testMapSpringMessageToXMLMessage_NonWriteableSolaceProperties() throws Exception {
+	void testMapSpringMessageToXMLMessage_NonWriteableSolaceProperties() throws Exception {
 		MessageBuilder<?> messageBuilder = new DefaultMessageBuilderFactory()
 				.withPayload("")
 				.setHeader(MessageHeaders.CONTENT_TYPE, MimeTypeUtils.TEXT_PLAIN_VALUE);
@@ -401,7 +436,7 @@ public class XMLMessageMapperTest {
 			}
 		}
 
-		validateXMLProperties(xmlMessage, testSpringMessage,
+		validateXMLProperties(xmlMessage, testSpringMessage.getPayload(), testSpringMessage.getHeaders(),
 				testSpringMessage.getHeaders()
 						.entrySet()
 						.stream()
@@ -415,7 +450,7 @@ public class XMLMessageMapperTest {
 	}
 
 	@Test
-	public void testMapSpringMessageToXMLMessage_WriteUndefinedSolaceHeader() throws Exception {
+	void testMapSpringMessageToXMLMessage_WriteUndefinedSolaceHeader() throws Exception {
 		String undefinedSolaceHeader1 = "abc1234";
 		SerializableFoo undefinedSolaceHeader2 = new SerializableFoo("abc", "123");
 		Message<?> testSpringMessage = new DefaultMessageBuilderFactory()
@@ -443,7 +478,7 @@ public class XMLMessageMapperTest {
 	}
 
 	@Test
-	public void testMapSpringMessageToXMLMessage_OverrideDefaultSolaceProperties() throws Exception {
+	void testMapSpringMessageToXMLMessage_OverrideDefaultSolaceProperties() throws Exception {
 		Set<Map.Entry<String, ? extends SolaceHeaderMeta<?>>> overriddenWriteableHeaders = SolaceHeaderMeta.META
 				.entrySet()
 				.stream()
@@ -471,20 +506,36 @@ public class XMLMessageMapperTest {
 		validateXMLProperties(xmlMessage, testSpringMessage);
 	}
 
+	@ParameterizedTest
+	@ValueSource(classes = {String.class, MimeType.class})
+	void testMapSpringMessageToXMLMessage_contentTypeHeader(
+			Class<?> contentTypeClass) {
+		Message<?> testSpringMessage = new DefaultMessageBuilderFactory()
+				.withPayload("test")
+				.setHeader(MessageHeaders.CONTENT_TYPE, MimeType.class.isAssignableFrom(contentTypeClass) ?
+						MimeTypeUtils.TEXT_PLAIN : MimeTypeUtils.TEXT_PLAIN_VALUE)
+				.build();
+
+		Assertions.assertThat(xmlMessageMapper.map(testSpringMessage, null, false))
+				.extracting(XMLMessage::getHTTPContentType)
+				.isEqualTo(MimeTypeUtils.TEXT_PLAIN_VALUE);
+	}
+
 	@Test
-	public void testFailMapSpringMessageToXMLMessage_InvalidPayload() {
+	void testFailMapSpringMessageToXMLMessage_InvalidPayload() {
 		Message<?> testSpringMessage = new DefaultMessageBuilderFactory().withPayload(new Object()).build();
 		assertThrows(SolaceMessageConversionException.class, () -> xmlMessageMapper.map(testSpringMessage,
 				null, false));
 	}
 
 	@Test
-	public void testFailMapSpringMessageToXMLMessage_InvalidHeaderType() {
+	void testFailMapSpringMessageToXMLMessage_InvalidHeaderType() {
 		Set<Map.Entry<String, ? extends HeaderMeta<?>>> writeableHeaders = Stream.of(
 					SolaceHeaderMeta.META.entrySet().stream(),
 					SolaceBinderHeaderMeta.META.entrySet().stream())
 				.flatMap(h -> h)
 				.filter(h -> h.getValue().isWritable())
+				.filter(h -> h.getValue().getScope().equals(HeaderMeta.Scope.WIRE))
 				.collect(Collectors.toSet());
 		assertNotEquals(0, writeableHeaders.size(), "Test header set was empty");
 
@@ -516,7 +567,7 @@ public class XMLMessageMapperTest {
 	}
 
 	@Test
-	public void testMapXMLMessageToErrorXMLMessage() throws Exception {
+	void testMapXMLMessageToErrorXMLMessage() throws Exception {
 		SDTMap headers = JCSMPFactory.onlyInstance().createMap();
 		headers.putInteger(SolaceBinderHeaders.MESSAGE_VERSION, 1);
 		headers.putString("a", "abc");
@@ -539,7 +590,7 @@ public class XMLMessageMapperTest {
 	}
 
 	@Test
-	public void testMapXMLMessageToErrorXMLMessage_WithProperties() {
+	void testMapXMLMessageToErrorXMLMessage_WithProperties() {
 		TextMessage inputMessage = JCSMPFactory.onlyInstance().createMessage(TextMessage.class);
 		SolaceConsumerProperties consumerProperties = new SolaceConsumerProperties();
 		consumerProperties.setErrorMsgDmqEligible(!inputMessage.isDMQEligible());
@@ -552,7 +603,7 @@ public class XMLMessageMapperTest {
 	}
 
 	@Test
-	public void testMapProducerSpringMessageToXMLMessage_WithExcludedHeader() throws SDTException {
+	void testMapProducerSpringMessageToXMLMessage_WithExcludedHeader() throws SDTException {
 		String testPayload = "testPayload";
 		List<String> excludedHeaders = Collections.singletonList("io.opentracing.contrib.spring.integration.messaging.OpenTracingChannelInterceptor.SCOPE");
 		Message<?> testSpringMessage = new DefaultMessageBuilderFactory().withPayload(testPayload)
@@ -569,7 +620,7 @@ public class XMLMessageMapperTest {
 	}
 
 	@Test
-	public void testMapProducerSpringMessageToXMLMessage_WithExcludedHeader_ShouldNotMatchPartially() throws SDTException {
+	void testMapProducerSpringMessageToXMLMessage_WithExcludedHeader_ShouldNotMatchPartially() throws SDTException {
 		String testPayload = "testPayload";
 		List<String> excludedHeaders = Collections.singletonList("io.opentracing.contrib.spring.integration.messaging.OpenTracingChannelInterceptor.SCOPE");
 		Message<?> testSpringMessage = new DefaultMessageBuilderFactory().withPayload(testPayload)
@@ -585,7 +636,7 @@ public class XMLMessageMapperTest {
 	}
 
 	@Test
-	public void testMapProducerSpringMessageToXMLMessage_WithExcludedHeader_ShouldNotFilterSolaceHeader() throws SDTException {
+	void testMapProducerSpringMessageToXMLMessage_WithExcludedHeader_ShouldNotFilterSolaceHeader() throws SDTException {
 		MessageBuilder<?> messageBuilder = new DefaultMessageBuilderFactory()
 				.withPayload(new SerializableFoo("a", "b"))
 				.setHeader(MessageHeaders.CONTENT_TYPE, MimeTypeUtils.TEXT_PLAIN_VALUE)
@@ -596,47 +647,38 @@ public class XMLMessageMapperTest {
 				SolaceBinderHeaderMeta.META.entrySet().stream())
 				.flatMap(h -> h)
 				.filter(h -> h.getValue().isWritable())
+				.filter(h -> h.getValue().getScope().equals(HeaderMeta.Scope.WIRE))
 				.collect(Collectors.toSet());
 		assertNotEquals(0, writeableHeaders.size(), "Test header set was empty");
 
 		for (Map.Entry<String, ? extends HeaderMeta<?>> header : writeableHeaders) {
-			Object value;
-			switch (header.getKey()) {
-			case SolaceHeaders.APPLICATION_MESSAGE_ID:
-			case SolaceHeaders.APPLICATION_MESSAGE_TYPE:
-			case SolaceHeaders.CORRELATION_ID:
-			case SolaceHeaders.HTTP_CONTENT_ENCODING:
-			case SolaceHeaders.SENDER_ID:
-			case SolaceBinderHeaders.PARTITION_KEY:
-				value = RandomStringUtils.randomAlphanumeric(10);
-				break;
-			case SolaceHeaders.DMQ_ELIGIBLE:
-				value = !(Boolean) ((SolaceHeaderMeta<?>) header.getValue()).getDefaultValueOverride();
-				break;
-			case SolaceHeaders.IS_REPLY:
-				value = true; //The opposite of what a Solace message defaults to
-				break;
-			case SolaceHeaders.EXPIRATION:
-			case SolaceHeaders.SENDER_TIMESTAMP:
-			case SolaceHeaders.SEQUENCE_NUMBER:
-			case SolaceHeaders.TIME_TO_LIVE:
-				value = (long) RandomUtils.nextInt(0, 10000);
-				break;
-			case SolaceHeaders.PRIORITY:
-				value = RandomUtils.nextInt(0, 255);
-				break;
-			case SolaceHeaders.REPLY_TO:
-				value = JCSMPFactory.onlyInstance().createQueue(RandomStringUtils.randomAlphanumeric(10));
-				break;
-			case SolaceHeaders.USER_DATA:
-				value = RandomStringUtils.randomAlphanumeric(10).getBytes();
-				break;
-			default:
-				value = null;
-				fail(String.format("no test for header %s", header.getKey()));
-			}
-			assertNotNull(value);
-			messageBuilder.setHeader(header.getKey(), value);
+			messageBuilder.setHeader(header.getKey(), Objects.requireNonNull(switch (header.getKey()) {
+				case SolaceHeaders.APPLICATION_MESSAGE_ID,
+					 SolaceHeaders.APPLICATION_MESSAGE_TYPE,
+					 SolaceHeaders.CORRELATION_ID,
+					 SolaceHeaders.HTTP_CONTENT_ENCODING,
+					 SolaceHeaders.SENDER_ID,
+					 SolaceBinderHeaders.PARTITION_KEY ->
+						RandomStringUtils.randomAlphanumeric(10);
+				case SolaceHeaders.DMQ_ELIGIBLE ->
+						!(Boolean) ((SolaceHeaderMeta<?>) header.getValue()).getDefaultValueOverride();
+				case SolaceHeaders.IS_REPLY -> true; //The opposite of what a Solace message defaults to
+				case SolaceHeaders.EXPIRATION,
+					 SolaceHeaders.SENDER_TIMESTAMP,
+					 SolaceHeaders.SEQUENCE_NUMBER,
+					 SolaceHeaders.TIME_TO_LIVE ->
+						ThreadLocalRandom.current().nextLong(10000);
+				case SolaceHeaders.PRIORITY ->
+						ThreadLocalRandom.current().nextInt(255);
+				case SolaceHeaders.REPLY_TO ->
+						JCSMPFactory.onlyInstance().createQueue(RandomStringUtils.randomAlphanumeric(10));
+				case SolaceHeaders.USER_DATA ->
+						RandomStringUtils.randomAlphanumeric(10).getBytes();
+				default -> {
+					fail(String.format("no test for header %s", header.getKey()));
+					yield null;
+				}
+			}));
 		}
 
 		List<String> excludedHeaders = writeableHeaders.stream()
@@ -649,54 +691,39 @@ public class XMLMessageMapperTest {
 		for (Map.Entry<String, ? extends HeaderMeta<?>> header : writeableHeaders) {
 			Object expectedValue = testSpringMessage.getHeaders().get(header.getKey());
 			switch (header.getKey()) {
-			case SolaceHeaders.APPLICATION_MESSAGE_ID:
-				assertEquals(expectedValue, xmlMessage.getApplicationMessageId());
-				break;
-			case SolaceHeaders.APPLICATION_MESSAGE_TYPE:
-				assertEquals(expectedValue, xmlMessage.getApplicationMessageType());
-				break;
-			case SolaceHeaders.CORRELATION_ID:
-				assertEquals(expectedValue, xmlMessage.getCorrelationId());
-				break;
-			case SolaceHeaders.DMQ_ELIGIBLE:
-				assertEquals(expectedValue, xmlMessage.isDMQEligible());
-				break;
-			case SolaceHeaders.EXPIRATION:
-				assertEquals(expectedValue, xmlMessage.getExpiration());
-				break;
-			case SolaceHeaders.HTTP_CONTENT_ENCODING:
-				assertEquals(expectedValue, xmlMessage.getHTTPContentEncoding());
-				break;
-			case SolaceHeaders.IS_REPLY:
-				assertEquals(expectedValue, xmlMessage.isReplyMessage());
-				break;
-			case SolaceHeaders.PRIORITY:
-				assertEquals(expectedValue, xmlMessage.getPriority());
-				break;
-			case SolaceHeaders.REPLY_TO:
-				assertEquals(expectedValue, xmlMessage.getReplyTo());
-				break;
-			case SolaceHeaders.SENDER_ID:
-				assertEquals(expectedValue, xmlMessage.getSenderId());
-				break;
-			case SolaceHeaders.SENDER_TIMESTAMP:
-				assertEquals(expectedValue, xmlMessage.getSenderTimestamp());
-				break;
-			case SolaceHeaders.SEQUENCE_NUMBER:
-				assertEquals(expectedValue, xmlMessage.getSequenceNumber());
-				break;
-			case SolaceHeaders.TIME_TO_LIVE:
-				assertEquals(expectedValue, xmlMessage.getTimeToLive());
-				break;
-			case SolaceHeaders.USER_DATA:
-				assertEquals(expectedValue, xmlMessage.getUserData());
-				break;
-			case SolaceBinderHeaders.PARTITION_KEY:
-				assertEquals(expectedValue, xmlMessage.getProperties()
-						.getString(XMLMessage.MessageUserPropertyConstants.QUEUE_PARTITION_KEY));
-				break;
-			default:
-				fail(String.format("no test for header %s", header.getKey()));
+				case SolaceHeaders.APPLICATION_MESSAGE_ID ->
+						assertEquals(expectedValue, xmlMessage.getApplicationMessageId());
+				case SolaceHeaders.APPLICATION_MESSAGE_TYPE ->
+						assertEquals(expectedValue, xmlMessage.getApplicationMessageType());
+				case SolaceHeaders.CORRELATION_ID ->
+						assertEquals(expectedValue, xmlMessage.getCorrelationId());
+				case SolaceHeaders.DMQ_ELIGIBLE ->
+						assertEquals(expectedValue, xmlMessage.isDMQEligible());
+				case SolaceHeaders.EXPIRATION ->
+						assertEquals(expectedValue, xmlMessage.getExpiration());
+				case SolaceHeaders.HTTP_CONTENT_ENCODING ->
+						assertEquals(expectedValue, xmlMessage.getHTTPContentEncoding());
+				case SolaceHeaders.IS_REPLY ->
+						assertEquals(expectedValue, xmlMessage.isReplyMessage());
+				case SolaceHeaders.PRIORITY ->
+					assertEquals(expectedValue, xmlMessage.getPriority());
+				case SolaceHeaders.REPLY_TO ->
+						assertEquals(expectedValue, xmlMessage.getReplyTo());
+				case SolaceHeaders.SENDER_ID ->
+						assertEquals(expectedValue, xmlMessage.getSenderId());
+				case SolaceHeaders.SENDER_TIMESTAMP ->
+						assertEquals(expectedValue, xmlMessage.getSenderTimestamp());
+				case SolaceHeaders.SEQUENCE_NUMBER ->
+						assertEquals(expectedValue, xmlMessage.getSequenceNumber());
+				case SolaceHeaders.TIME_TO_LIVE ->
+						assertEquals(expectedValue, xmlMessage.getTimeToLive());
+				case SolaceHeaders.USER_DATA ->
+						assertEquals(expectedValue, xmlMessage.getUserData());
+				case SolaceBinderHeaders.PARTITION_KEY ->
+						assertEquals(expectedValue, xmlMessage.getProperties()
+								.getString(XMLMessage.MessageUserPropertyConstants.QUEUE_PARTITION_KEY));
+				default ->
+						fail(String.format("no test for header %s", header.getKey()));
 			}
 		}
 
@@ -713,7 +740,7 @@ public class XMLMessageMapperTest {
 
 	@ParameterizedTest
 	@MethodSource("xmlMessageTypeProviders")
-	public <T, MT extends XMLMessage> void testMapXMLMessageToSpringMessage(
+	<T, MT extends XMLMessage> void testMapXMLMessageToSpringMessage(
 			XmlMessageTypeProvider<T, MT> xmlMessageTypeProvider) throws Throwable {
 		MT xmlMessage = JCSMPFactory.onlyInstance().createMessage(xmlMessageTypeProvider.getXmlMessageType());
 		T expectedPayload = xmlMessageTypeProvider.createPayload();
@@ -738,7 +765,7 @@ public class XMLMessageMapperTest {
 
 	@ParameterizedTest
 	@MethodSource("xmlMessageTypeProviders")
-	public <T, MT extends XMLMessage> void testMapXMLMessageToSpringMessageBatch(
+	<T, MT extends XMLMessage> void testMapXMLMessageToSpringMessageBatch(
 			XmlMessageTypeProvider<T, MT> xmlMessageTypeProvider) {
 		List<T> expectedPayloads = IntStream.range(0, 256)
 				.mapToObj(i -> xmlMessageTypeProvider.createPayload())
@@ -769,7 +796,7 @@ public class XMLMessageMapperTest {
 
 	@ParameterizedTest
 	@MethodSource("xmlMessageTypeProviders")
-	public <T, MT extends XMLMessage> void testMapXMLMessageToSpringMessage_WithRawMessageHeader(
+	<T, MT extends XMLMessage> void testMapXMLMessageToSpringMessage_WithRawMessageHeader(
 			XmlMessageTypeProvider<T, MT> xmlMessageTypeProvider) throws Throwable {
 		MT xmlMessage = JCSMPFactory.onlyInstance().createMessage(xmlMessageTypeProvider.getXmlMessageType());
 		T expectedPayload = xmlMessageTypeProvider.createPayload();
@@ -793,7 +820,7 @@ public class XMLMessageMapperTest {
 
 	@ParameterizedTest
 	@MethodSource("xmlMessageTypeProviders")
-	public <T, MT extends XMLMessage> void testMapXMLMessageToSpringMessageBatch_WithRawMessageHeader(
+	<T, MT extends XMLMessage> void testMapXMLMessageToSpringMessageBatch_WithRawMessageHeader(
 			XmlMessageTypeProvider<T, MT> xmlMessageTypeProvider) {
 		List<T> expectedPayloads = IntStream.range(0, 256)
 				.mapToObj(i -> xmlMessageTypeProvider.createPayload())
@@ -828,7 +855,7 @@ public class XMLMessageMapperTest {
 	}
 
 	@CartesianTest(name = "[{index}] {0} batchMode={1}")
-	public <T, MT extends XMLMessage> void testMapXMLMessageToSpringMessage_WithContentTypeHeaderAndHTTPContentType(
+	<T, MT extends XMLMessage> void testMapXMLMessageToSpringMessage_WithContentTypeHeaderAndHTTPContentType(
 			@CartesianArgumentsSource(XmlMessageTypeCartesianProvider.class)
 					Named<XmlMessageTypeProvider<T, MT>> namedXmlMessageTypeProvider,
 			@Values(booleans = {false, true}) boolean batchMode) throws Throwable {
@@ -873,7 +900,7 @@ public class XMLMessageMapperTest {
 
 	@ParameterizedTest(name = "[{index}] batchMode={0}")
 	@ValueSource(booleans = {false, true})
-	public void testMapXMLMessageToSpringMessage_ReadSolaceProperties(boolean batchMode) throws Exception {
+	void testMapXMLMessageToSpringMessage_ReadSolaceProperties(boolean batchMode) throws Exception {
 		Set<Map.Entry<String, ? extends HeaderMeta<?>>> readableHeaders = Stream.of(
 					SolaceHeaderMeta.META.entrySet().stream(),
 					SolaceBinderHeaderMeta.META.entrySet().stream())
@@ -913,7 +940,7 @@ public class XMLMessageMapperTest {
 					Mockito.when(xmlMessage.isDMQEligible()).thenReturn(!defaultXmlMessage.isDMQEligible());
 					break;
 				case SolaceHeaders.EXPIRATION:
-					Mockito.when(xmlMessage.getExpiration()).thenReturn(RandomUtils.nextLong());
+					Mockito.when(xmlMessage.getExpiration()).thenReturn(ThreadLocalRandom.current().nextLong());
 					break;
 				case SolaceHeaders.IS_REPLY:
 					Mockito.when(xmlMessage.isReplyMessage()).thenReturn(!defaultXmlMessage.isReplyMessage());
@@ -922,10 +949,10 @@ public class XMLMessageMapperTest {
 					Mockito.when(xmlMessage.getHTTPContentEncoding()).thenReturn(header.getKey());
 					break;
 				case SolaceHeaders.PRIORITY:
-					Mockito.when(xmlMessage.getPriority()).thenReturn(RandomUtils.nextInt());
+					Mockito.when(xmlMessage.getPriority()).thenReturn(ThreadLocalRandom.current().nextInt());
 					break;
 				case SolaceHeaders.RECEIVE_TIMESTAMP:
-					Mockito.when(xmlMessage.getReceiveTimestamp()).thenReturn(RandomUtils.nextLong());
+					Mockito.when(xmlMessage.getReceiveTimestamp()).thenReturn(ThreadLocalRandom.current().nextLong());
 					break;
 				case SolaceHeaders.REDELIVERED:
 					Mockito.when(xmlMessage.getRedelivered()).thenReturn(!defaultXmlMessage.getRedelivered());
@@ -941,19 +968,19 @@ public class XMLMessageMapperTest {
 					Mockito.when(xmlMessage.getSenderId()).thenReturn(header.getKey());
 					break;
 				case SolaceHeaders.SENDER_TIMESTAMP:
-					Mockito.when(xmlMessage.getSenderTimestamp()).thenReturn(RandomUtils.nextLong());
+					Mockito.when(xmlMessage.getSenderTimestamp()).thenReturn(ThreadLocalRandom.current().nextLong());
 					break;
 				case SolaceHeaders.SEQUENCE_NUMBER:
-					Mockito.when(xmlMessage.getSequenceNumber()).thenReturn(RandomUtils.nextLong());
+					Mockito.when(xmlMessage.getSequenceNumber()).thenReturn(ThreadLocalRandom.current().nextLong());
 					break;
 				case SolaceHeaders.TIME_TO_LIVE:
-					Mockito.when(xmlMessage.getTimeToLive()).thenReturn(RandomUtils.nextLong());
+					Mockito.when(xmlMessage.getTimeToLive()).thenReturn(ThreadLocalRandom.current().nextLong());
 					break;
 				case SolaceHeaders.USER_DATA:
 					Mockito.when(xmlMessage.getUserData()).thenReturn(header.getKey().getBytes());
 					break;
 				case SolaceBinderHeaders.MESSAGE_VERSION:
-					metadata.putInteger(header.getKey(), RandomUtils.nextInt());
+					metadata.putInteger(header.getKey(), ThreadLocalRandom.current().nextInt());
 					break;
 				default:
 					fail(String.format("no test for header %s", header.getKey()));
@@ -1068,7 +1095,7 @@ public class XMLMessageMapperTest {
 
 	@ParameterizedTest(name = "[{index}] batchMode={0}")
 	@ValueSource(booleans = {false, true})
-	public void testMapXMLMessageToSpringMessage_NonReadableSolaceProperties(boolean batchMode) throws Exception {
+	void testMapXMLMessageToSpringMessage_NonReadableSolaceProperties(boolean batchMode) throws Exception {
 		Set<Map.Entry<String, ? extends HeaderMeta<?>>> nonReadableHeaders = Stream.of(
 				SolaceHeaderMeta.META.entrySet().stream(),
 				SolaceBinderHeaderMeta.META.entrySet().stream())
@@ -1151,7 +1178,7 @@ public class XMLMessageMapperTest {
 
 	@ParameterizedTest(name = "[{index}] batchMode={0}")
 	@ValueSource(booleans = {false, true})
-	public void testMapXMLMessageToSpringMessage_ReadLocalSolaceProperties(boolean batchMode) throws Exception {
+	void testMapXMLMessageToSpringMessage_ReadLocalSolaceProperties(boolean batchMode) throws Exception {
 		Set<Map.Entry<String, ? extends HeaderMeta<?>>> readableLocalHeaders = Stream.of(
 				SolaceHeaderMeta.META.entrySet().stream(),
 				SolaceBinderHeaderMeta.META.entrySet().stream())
@@ -1223,7 +1250,7 @@ public class XMLMessageMapperTest {
 
 	@ParameterizedTest(name = "[{index}] batchMode={0}")
 	@ValueSource(booleans = {false, true})
-	public void testMapXMLMessageToSpringMessage_deliveryCountFeatureEnabled(boolean batchMode) {
+	void testMapXMLMessageToSpringMessage_deliveryCountFeatureEnabled(boolean batchMode) {
 		int deliveryCount = 42;
 		TextMessage xmlMessage = Mockito.mock(TextMessage.class);
 		Mockito.when(xmlMessage.getText()).thenReturn("testPayload");
@@ -1248,7 +1275,7 @@ public class XMLMessageMapperTest {
 
 	@ParameterizedTest(name = "[{index}] batchMode={0}")
 	@ValueSource(booleans = {false, true})
-	public void testMapXMLMessageToSpringMessage_ReadUndefinedSolaceHeader(boolean batchMode) throws Exception {
+	void testMapXMLMessageToSpringMessage_ReadUndefinedSolaceHeader(boolean batchMode) throws Exception {
 		String undefinedSolaceHeader1 = "abc124";
 		SerializableFoo undefinedSolaceHeader2 = new SerializableFoo("a", "b");
 		TextMessage xmlMessage = JCSMPFactory.onlyInstance().createMessage(TextMessage.class);
@@ -1290,7 +1317,7 @@ public class XMLMessageMapperTest {
 
 	@ParameterizedTest(name = "[{index}] batchMode={0}")
 	@ValueSource(booleans = {false, true})
-	public void testMapXMLMessageToSpringMessage_WithNullPayload(boolean batchMode) {
+	void testMapXMLMessageToSpringMessage_WithNullPayload(boolean batchMode) {
 		BytesMessage xmlMessage = JCSMPFactory.onlyInstance().createMessage(BytesMessage.class);
 		AcknowledgmentCallback acknowledgmentCallback = Mockito.mock(AcknowledgmentCallback.class);
 		SolaceConsumerProperties consumerProperties = new SolaceConsumerProperties();
@@ -1317,7 +1344,7 @@ public class XMLMessageMapperTest {
 
 	@ParameterizedTest(name = "[{index}] batchMode={0}")
 	@ValueSource(booleans = {false, true})
-	public void testMapXMLMessageToSpringMessage_WithListPayload(boolean batchMode) throws Exception {
+	void testMapXMLMessageToSpringMessage_WithListPayload(boolean batchMode) throws Exception {
 		BytesMessage xmlMessage = JCSMPFactory.onlyInstance().createMessage(BytesMessage.class);
 		List<SerializableFoo> expectedPayload = Collections.singletonList(new SerializableFoo(
 				RandomStringUtils.randomAlphanumeric(100), RandomStringUtils.randomAlphanumeric(100)));
@@ -1348,7 +1375,7 @@ public class XMLMessageMapperTest {
 	}
 
 	@Test
-	public void testMapMessageHeadersToSDTMap_JMSXGroupID() throws Exception {
+	void testMapMessageHeadersToSDTMap_JMSXGroupID() throws Exception {
 		String jmsxGroupID = "partition-key-value";
 		SDTMap sdtMap = xmlMessageMapper.map(
 				new MessageHeaders(Collections.singletonMap(
@@ -1359,7 +1386,7 @@ public class XMLMessageMapperTest {
 	}
 
 	@Test
-	public void testMapMessageHeadersToSDTMap_Serializable() throws Exception {
+	void testMapMessageHeadersToSDTMap_Serializable() throws Exception {
 		String key = "a";
 		SerializableFoo value = new SerializableFoo("abc123", "HOOPLA!");
 		Map<String,Object> headers = new HashMap<>();
@@ -1384,7 +1411,7 @@ public class XMLMessageMapperTest {
 	}
 
 	@Test
-	public void testMapMessageHeadersToSDTMap_NonSerializable() {
+	void testMapMessageHeadersToSDTMap_NonSerializable() {
 		SolaceMessageConversionException thrown = assertThrows(SolaceMessageConversionException.class,
 				() -> xmlMessageMapper.map(new MessageHeaders(Collections.singletonMap("a", new Object())),
 						Collections.emptyList(), false));
@@ -1393,7 +1420,7 @@ public class XMLMessageMapperTest {
 	}
 
 	@Test
-	public void testMapMessageHeadersToSDTMap_NonSerializableToString() throws Exception {
+	void testMapMessageHeadersToSDTMap_NonSerializableToString() throws Exception {
 		String key = "a";
 		Object value = new Object();
 		SDTMap sdtMap = xmlMessageMapper.map(new MessageHeaders(Collections.singletonMap(key, value)),
@@ -1402,7 +1429,7 @@ public class XMLMessageMapperTest {
 	}
 
 	@Test
-	public void testMapMessageHeadersToSDTMap_Null() throws Exception {
+	void testMapMessageHeadersToSDTMap_Null() throws Exception {
 		String key = "a";
 		Map<String,Object> headers = Collections.singletonMap(key, null);
 		SDTMap sdtMap = xmlMessageMapper.map(new MessageHeaders(headers), Collections.emptyList(), false);
@@ -1411,7 +1438,7 @@ public class XMLMessageMapperTest {
 	}
 
 	@Test
-	public void testMapMessageHeadersToSDTMap_NonJmsCompatible() throws Exception {
+	void testMapMessageHeadersToSDTMap_NonJmsCompatible() throws Exception {
 		byte[] value = "test".getBytes(); // byte[] values are not supported by JMS
 		Map<String,Object> headers = new HashMap<>();
 		JMS_INVALID_HEADER_NAMES.forEach(h -> headers.put(h, value));
@@ -1425,7 +1452,7 @@ public class XMLMessageMapperTest {
 	}
 
 	@Test
-	public void testMapSDTMapToMessageHeaders_Serializable() throws Exception {
+	void testMapSDTMapToMessageHeaders_Serializable() throws Exception {
 		String key = "a";
 		SerializableFoo value = new SerializableFoo("abc123", "HOOPLA!");
 		SDTMap sdtMap = JCSMPFactory.onlyInstance().createMap();
@@ -1442,7 +1469,7 @@ public class XMLMessageMapperTest {
 	}
 
 	@Test
-	public void testMapSDTMapToMessageHeaders_Null() throws Exception {
+	void testMapSDTMapToMessageHeaders_Null() throws Exception {
 		String key = "a";
 		SDTMap sdtMap = JCSMPFactory.onlyInstance().createMap();
 		sdtMap.putObject(key, null);
@@ -1454,7 +1481,7 @@ public class XMLMessageMapperTest {
 	}
 
 	@Test
-	public void testMapSDTMapToMessageHeaders_WithNullExcludedHeader() throws Exception {
+	void testMapSDTMapToMessageHeaders_WithNullExcludedHeader() throws Exception {
 		SDTMap sdtMap = JCSMPFactory.onlyInstance().createMap();
 		for (int i = 0; i < 10; i++) {
 			sdtMap.putObject("headerKey" + i, UUID.randomUUID().toString());
@@ -1470,7 +1497,7 @@ public class XMLMessageMapperTest {
 
 	@ParameterizedTest(name = "[{index}] batchMode={0}")
 	@ValueSource(booleans = {false, true})
-	public void testMapXMLMessageToSpringMessage_WithExcludedHeader(boolean batchMode)
+	void testMapXMLMessageToSpringMessage_WithExcludedHeader(boolean batchMode)
 			throws SDTException {
 		List<String> excludedHeaders = List.of("headerKey1", "headerKey2", "headerKey5",
 				"solace_expiration", "solace_discardIndication", "solace_redelivered",
@@ -1511,7 +1538,7 @@ public class XMLMessageMapperTest {
 	}
 
 	@Test
-	public void testMapSDTMapToMessageHeaders_WithExcludedHeader() throws Exception {
+	void testMapSDTMapToMessageHeaders_WithExcludedHeader() throws Exception {
 		SDTMap sdtMap = JCSMPFactory.onlyInstance().createMap();
 		for (int i = 0; i < 10; i++) {
 			sdtMap.putObject("headerKey" + i, UUID.randomUUID().toString());
@@ -1531,7 +1558,7 @@ public class XMLMessageMapperTest {
 	}
 
 	@Test
-	public void testMapSDTMapToMessageHeaders_WithExcludedHeader_canExcludeBinderHeaders() throws Exception {
+	void testMapSDTMapToMessageHeaders_WithExcludedHeader_canExcludeBinderHeaders() throws Exception {
 		SDTMap sdtMap = JCSMPFactory.onlyInstance().createMap();
 		sdtMap.putObject(SolaceBinderHeaders.MESSAGE_VERSION, 10);
 		sdtMap.putObject(SolaceBinderHeaders.SERIALIZED_HEADERS, "header1, header2");
@@ -1554,7 +1581,7 @@ public class XMLMessageMapperTest {
 	}
 
 	@Test
-	public void testMapSDTMapToMessageHeaders_EncodedSerializable() throws Exception {
+	void testMapSDTMapToMessageHeaders_EncodedSerializable() throws Exception {
 		String key = "a";
 		SerializableFoo value = new SerializableFoo("abc123", "HOOPLA!");
 		SDTMap sdtMap = JCSMPFactory.onlyInstance().createMap();
@@ -1572,7 +1599,7 @@ public class XMLMessageMapperTest {
 	}
 
 	@Test
-	public void testMapSDTMapToMessageHeaders_ExtraSerializableHeader() throws Exception {
+	void testMapSDTMapToMessageHeaders_ExtraSerializableHeader() throws Exception {
 		String key = "a";
 		SDTMap sdtMap = JCSMPFactory.onlyInstance().createMap();
 		Set<String> serializedHeaders = Collections.singleton(key);
@@ -1585,7 +1612,7 @@ public class XMLMessageMapperTest {
 	}
 
 	@Test
-	public void testMapSDTMapToMessageHeaders_NullSerializableHeader() throws Exception {
+	void testMapSDTMapToMessageHeaders_NullSerializableHeader() throws Exception {
 		String key = "a";
 		SDTMap sdtMap = JCSMPFactory.onlyInstance().createMap();
 		sdtMap.putObject(key, null);
@@ -1601,7 +1628,7 @@ public class XMLMessageMapperTest {
 	}
 
 	@Test
-	public void testFailMapSDTMapToMessageHeaders_InvalidEncoding() throws Exception {
+	void testFailMapSDTMapToMessageHeaders_InvalidEncoding() throws Exception {
 		String key = "a";
 		SerializableFoo value = new SerializableFoo("abc123", "HOOPLA!");
 		SDTMap sdtMap = JCSMPFactory.onlyInstance().createMap();
@@ -1616,7 +1643,7 @@ public class XMLMessageMapperTest {
 	}
 
 	@Test
-	public void testMapSDTMapToMessageHeaders_NonJmsCompatible() throws Exception {
+	void testMapSDTMapToMessageHeaders_NonJmsCompatible() throws Exception {
 		byte[] value = "test".getBytes(); // byte[] values are not supported by JMS
 		SDTMap sdtMap = JCSMPFactory.onlyInstance().createMap();
 		for (String header : JMS_INVALID_HEADER_NAMES) {
@@ -1632,7 +1659,7 @@ public class XMLMessageMapperTest {
 	}
 
 	@Test
-	public void testMapLoop() throws Exception {
+	void testMapLoop() throws Exception {
 		Message<?> expectedSpringMessage = new DefaultMessageBuilderFactory()
 				.withPayload("testPayload")
 				.setHeader("test-header-1", "test-header-val-1")
@@ -1656,7 +1683,8 @@ public class XMLMessageMapperTest {
 		do {
 			logger.info(String.format("Iteration %s - Message<?> to XMLMessage:\n%s", i, springMessage));
 			xmlMessage = xmlMessageMapper.map(springMessage, null, false);
-			validateXMLProperties(xmlMessage, expectedSpringMessage, springHeaders);
+			validateXMLProperties(xmlMessage, expectedSpringMessage.getPayload(), expectedSpringMessage.getHeaders(),
+					springHeaders);
 
 			logger.info(String.format("Iteration %s - XMLMessage to Message<?>:\n%s", i, xmlMessage));
 			AcknowledgmentCallback acknowledgmentCallback = Mockito.mock(AcknowledgmentCallback.class);
@@ -1673,15 +1701,26 @@ public class XMLMessageMapperTest {
 
 	private void validateXMLProperties(XMLMessage xmlMessage, Message<?> springMessage)
 			throws Exception {
-		validateXMLProperties(xmlMessage, springMessage, springMessage.getHeaders());
+		validateXMLProperties(xmlMessage, springMessage.getPayload(), springMessage.getHeaders());
 	}
 
-	private void validateXMLProperties(XMLMessage xmlMessage, Message<?> springMessage, Map<String, Object> expectedHeaders)
+	private void validateXMLProperties(XMLMessage xmlMessage,
+									   Object springMessagePayload,
+									   Map<String, Object> springMessageHeaders)
 			throws Exception {
+		validateXMLProperties(xmlMessage, springMessagePayload, springMessageHeaders, springMessageHeaders);
+	}
+
+	private void validateXMLProperties(
+			XMLMessage xmlMessage,
+			Object springMessagePayload,
+			Map<String, Object> springMessageHeaders,
+			Map<String, Object> expectedHeaders) throws Exception {
 
 		assertEquals(DeliveryMode.PERSISTENT, xmlMessage.getDeliveryMode());
-		assertEquals(Objects.requireNonNull(StaticMessageHeaderAccessor.getContentType(springMessage)).toString(),
-				xmlMessage.getHTTPContentType());
+		Assertions.assertThat(new GenericMessage<>(springMessagePayload, springMessageHeaders))
+				.extracting(StaticMessageHeaderAccessor::getContentType)
+				.hasToString(xmlMessage.getHTTPContentType());
 
 		SDTMap metadata = xmlMessage.getProperties();
 
@@ -1692,20 +1731,25 @@ public class XMLMessageMapperTest {
 		if (metadata.containsKey(SolaceBinderHeaders.SERIALIZED_HEADERS)) {
 			XMLMessageMapper.Encoder encoder = XMLMessageMapper.Encoder
 					.getByName(metadata.getString(SolaceBinderHeaders.SERIALIZED_HEADERS_ENCODING));
+
 			Set<String> serializedHeadersSet = objectReader.forType(new TypeReference<Set<String>>(){})
 					.readValue(metadata.getString(SolaceBinderHeaders.SERIALIZED_HEADERS));
-			assertThat(serializedHeadersSet, not(empty()));
-			for (String serializedHeader : serializedHeadersSet) {
-				serializedHeaders.add(serializedHeader);
-				assertThat(metadata.keySet(), hasItem(serializedHeader));
-				Object headerValue = SerializationUtils.deserialize(encoder != null ?
-						encoder.decode(metadata.getString(serializedHeader)) : metadata.getBytes(serializedHeader));
-				if (expectedHeaders.containsKey(serializedHeader)) {
-					assertEquals(expectedHeaders.get(serializedHeader), headerValue);
-				} else {
-					assertNotNull(headerValue);
-				}
-			}
+			Assertions.assertThat(serializedHeadersSet)
+					.isNotEmpty()
+					.allSatisfy(h -> Assertions.assertThat(metadata.keySet()).contains(h))
+					.allSatisfy(h -> {
+						Object headerValue = SerializationUtils.deserialize(encoder != null ?
+								encoder.decode(metadata.getString(h)) :
+								metadata.getBytes(h));
+
+						if (expectedHeaders.containsKey(h)) {
+							assertEquals(expectedHeaders.get(h), headerValue);
+						} else {
+							assertNotNull(headerValue);
+						}
+					});
+
+			serializedHeaders.addAll(serializedHeadersSet);
 		}
 
 		Map<String, SolaceHeaderMeta<?>> readWriteableSolaceHeaders = SolaceHeaderMeta.META
@@ -1726,9 +1770,20 @@ public class XMLMessageMapperTest {
 									headerKey = XMLMessage.MessageUserPropertyConstants.QUEUE_PARTITION_KEY;
 							case XMLMessage.MessageUserPropertyConstants.QUEUE_PARTITION_KEY ->
 									headerValue = expectedHeaders.getOrDefault(SolaceBinderHeaders.PARTITION_KEY, headerValue);
+							case SolaceBinderHeaders.BATCHED_HEADERS,
+								 SolaceBinderHeaders.CONFIRM_CORRELATION,
+								 SolaceBinderHeaders.TARGET_DESTINATION_TYPE -> {
+								// These Spring headers aren't ever reflected in the SMF message
+								Assertions.assertThat(metadata.keySet()).doesNotContain(headerKey);
+								return;
+							}
 						}
-						assertThat(metadata.keySet(), hasItem(headerKey));
-						assertEquals(headerValue, ((ThrowingFunction<String, Object>) metadata::get).apply(headerKey));
+						Assertions.assertThat(metadata.keySet()).contains(headerKey);
+						try {
+							Assertions.assertThat(metadata.get(headerKey)).isEqualTo(headerValue);
+						} catch (SDTException e) {
+							throw new RuntimeException(e);
+						}
 					}
 				});
 	}
@@ -1758,7 +1813,8 @@ public class XMLMessageMapperTest {
 				.extractingByKey(SolaceBinderHeaders.BATCHED_HEADERS)
 				.isNotNull()
 				.asInstanceOf(InstanceOfAssertFactories.list(Map.class))
-				.hasSize(xmlMessages.size())
+				.hasSameSizeAs(xmlMessages)
+				.hasSameSizeAs(expectedBatchedHeaders)
 				.map(messageHeaders -> {
 					@SuppressWarnings("unchecked")
 					MessageHeaders headers = new MessageHeaders((Map<String, Object>) messageHeaders);
@@ -1780,52 +1836,47 @@ public class XMLMessageMapperTest {
 				.stream()
 				.filter(h -> !h.getValue().isReadable())
 				.map(Map.Entry::getKey)
-				.collect(Collectors.toList());
+				.toList();
 
-		for (String customHeaderName : nonReadableBinderHeaderMeta) {
-			assertThat(messageHeaders.keySet(), not(hasItem(customHeaderName)));
-		}
+		Assertions.assertThat(nonReadableBinderHeaderMeta)
+				.allSatisfy(customHeaderName ->
+						Assertions.assertThat(messageHeaders).doesNotContainKey(customHeaderName));
 
 		Set<String> serializedHeaders = new HashSet<>();
 		if (expectedHeaders.containsKey(SolaceBinderHeaders.SERIALIZED_HEADERS)) {
 			String serializedHeaderJson = expectedHeaders.getString(SolaceBinderHeaders.SERIALIZED_HEADERS);
-			assertThat(serializedHeaderJson, not(emptyString()));
+			Assertions.assertThat(serializedHeaderJson).isNotEmpty();
+
 			Set<String> serializedHeaderSet = objectReader.forType(new TypeReference<Set<String>>() {})
 					.readValue(serializedHeaderJson);
-			assertThat(serializedHeaderSet, not(empty()));
-			for (String serializedHeader : serializedHeaderSet) {
-				serializedHeaders.add(serializedHeader);
-				assertThat(expectedHeaders.keySet(), hasItem(serializedHeader));
-				assertThat(messageHeaders.keySet(), hasItem(serializedHeader));
-				assertEquals(SerializationUtils.deserialize(expectedHeaders.getBytes(serializedHeader)),
-						messageHeaders.get(serializedHeader));
-			}
+			Assertions.assertThat(serializedHeaderSet)
+					.isNotEmpty()
+					.allSatisfy(h -> Assertions.assertThat(expectedHeaders.keySet()).contains(h))
+					.allSatisfy(h -> Assertions.assertThat(messageHeaders.keySet()).contains(h))
+					.allSatisfy(h -> Assertions.assertThat(SerializationUtils.deserialize(expectedHeaders.getBytes(h)))
+							.isEqualTo(messageHeaders.get(h)));
+
+			serializedHeaders.addAll(serializedHeaderSet);
 		}
 
-		for (String headerName : expectedHeaders.keySet()) {
-			if (nonReadableBinderHeaderMeta.contains(headerName) || serializedHeaders.contains(headerName)) continue;
-			assertEquals(expectedHeaders.get(headerName), messageHeaders.get(headerName));
-		}
-
-		if (batchMode) {
-			Assertions.assertThat(messageHeaders)
-					.doesNotContainKey(IntegrationMessageHeaderAccessor.ACKNOWLEDGMENT_CALLBACK);
-		} else {
-			Assertions.assertThat(messageHeaders.get(IntegrationMessageHeaderAccessor.ACKNOWLEDGMENT_CALLBACK,
-							AcknowledgmentCallback.class))
-					.isNotNull()
-					.isInstanceOf(AcknowledgmentCallback.class);
-		}
+		Assertions.assertThat(expectedHeaders.keySet())
+				.filteredOn(h -> !(nonReadableBinderHeaderMeta.contains(h) || serializedHeaders.contains(h)))
+				.allSatisfy(h -> assertEquals(expectedHeaders.get(h), messageHeaders.get(h)));
 
 		if (batchMode) {
 			Assertions.assertThat(messageHeaders)
+					.doesNotContainKey(IntegrationMessageHeaderAccessor.ACKNOWLEDGMENT_CALLBACK)
 					.doesNotContainKey(IntegrationMessageHeaderAccessor.DELIVERY_ATTEMPT);
 		} else {
-			Assertions.assertThat(messageHeaders.get(IntegrationMessageHeaderAccessor.DELIVERY_ATTEMPT,
-							AtomicInteger.class))
-					.isNotNull()
-					.asInstanceOf(InstanceOfAssertFactories.ATOMIC_INTEGER)
-					.hasValue(0);
+			Assertions.assertThat(messageHeaders)
+					.hasEntrySatisfying(IntegrationMessageHeaderAccessor.ACKNOWLEDGMENT_CALLBACK, v ->
+							Assertions.assertThat(v)
+									.asInstanceOf(InstanceOfAssertFactories.type(AcknowledgmentCallback.class))
+									.isNotNull())
+					.hasEntrySatisfying(IntegrationMessageHeaderAccessor.DELIVERY_ATTEMPT, v ->
+							Assertions.assertThat(v)
+									.asInstanceOf(InstanceOfAssertFactories.ATOMIC_INTEGER)
+									.hasValue(0));
 		}
 
 		Object contentType = messageHeaders.get(MessageHeaders.CONTENT_TYPE);
@@ -1840,10 +1891,12 @@ public class XMLMessageMapperTest {
 	}
 
 	private <T> void validateSpringBatchPayload(List<?> payloads, List<T> expectedPayloads) {
-		Assertions.assertThat(payloads).hasSize(expectedPayloads.size());
-		for (int i = 0; i < expectedPayloads.size(); i++) {
-			validateSpringPayload(payloads.get(i), expectedPayloads.get(i));
-		}
+		Assertions.assertThat(payloads).hasSameSizeAs(expectedPayloads);
+		Assertions.assertThat(IntStream.range(0, payloads.size())
+						.mapToObj(i -> new ImmutablePair<>(payloads.get(i), expectedPayloads.get(i)))
+						.toList()
+				)
+				.allSatisfy(p -> validateSpringPayload(p.getLeft(), p.getRight()));
 	}
 
 	private <T> void validateSpringPayload(Object payload, T expectedPayload) {
@@ -1865,6 +1918,78 @@ public class XMLMessageMapperTest {
 			assertEquals(expectedPayload, springMessagePayload);
 		}
 	}
+
+	private static Stream<Arguments> springPayloadTypeProviders() {
+
+		return Stream.of(
+				Arguments.of(Named.of("BYTE_ARRAY", new SpringMessageTypeProvider<>(
+						BytesMessage.class,
+						MimeTypeUtils.APPLICATION_OCTET_STREAM,
+						() -> "testPayload".getBytes(StandardCharsets.UTF_8),
+						BytesMessage::getData))),
+				Arguments.of(Named.of("STRING", new SpringMessageTypeProvider<>(
+						TextMessage.class,
+						MimeTypeUtils.TEXT_PLAIN,
+						() -> "testPayload",
+						TextMessage::getText))),
+				Arguments.of(Named.of("SERIALIZABLE", new SpringMessageTypeProvider<>(
+						BytesMessage.class,
+						new MimeType("application", "x-java-serialized-object"),
+						() -> new SerializableFoo("abc123", "HOOPLA!"),
+						m -> SerializationUtils.deserialize(m.getData()),
+						true))),
+				Arguments.of(Named.of("SDT_STREAM", new SpringMessageTypeProvider<>(
+						StreamMessage.class,
+						new MimeType("application", "x-java-serialized-object"),
+						() -> {
+							SDTStream sdtStream = JCSMPFactory.onlyInstance().createStream();
+							sdtStream.writeBoolean(true);
+							sdtStream.writeCharacter('s');
+							sdtStream.writeMap(JCSMPFactory.onlyInstance().createMap());
+							sdtStream.writeStream(JCSMPFactory.onlyInstance().createStream());
+							return sdtStream;
+						},
+						StreamMessage::getStream))),
+				Arguments.of(Named.of("SDT_MAP", new SpringMessageTypeProvider<>(
+						MapMessage.class,
+						new MimeType("application", "x-java-serialized-object"),
+						() -> {
+							SDTMap sdtMap = JCSMPFactory.onlyInstance().createMap();
+							sdtMap.putBoolean("a", true);
+							sdtMap.putCharacter("b", 's');
+							sdtMap.putMap("c", JCSMPFactory.onlyInstance().createMap());
+							sdtMap.putStream("d", JCSMPFactory.onlyInstance().createStream());
+							return sdtMap;
+						},
+						MapMessage::getMap)))
+		);
+	}
+
+	private record SpringMessageTypeProvider<T, MT extends XMLMessage>(
+			Class<MT> expectedXmlMessageType,
+			MimeType mimeType,
+			ThrowingSupplier<T> createPayloadSupplier,
+			Function<MT, T> xmlMessagePayloadGetter,
+			boolean serializedPayload) {
+		public SpringMessageTypeProvider(Class<MT> expectedXmlMessageType,
+										 MimeType mimeType,
+										 ThrowingSupplier<T> createPayloadSupplier,
+										 Function<MT, T> xmlMessagePayloadGetter) {
+			this(expectedXmlMessageType, mimeType, createPayloadSupplier, xmlMessagePayloadGetter, false);
+		}
+
+		public T createPayload() {
+				try {
+					return createPayloadSupplier.get();
+				} catch (Throwable e) {
+					throw new RuntimeException(e);
+				}
+			}
+
+			public T extractSmfPayload(MT message) {
+				return xmlMessagePayloadGetter.apply(message);
+			}
+		}
 
 	private static Stream<Arguments> xmlMessageTypeProviders() {
 		return Stream.of(
